fixed some known bugs - form break on multiple submit, multiple form slide-ins on task-click, no fetch call made when submitting task edit if form was previously created via task-click

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -235,7 +235,7 @@
 
 #edit-task {
   animation-duration: 1s;
-  animation-name: slidein;
+  animation-name: slidein
 }
 
 @keyframes slidein {
@@ -247,6 +247,7 @@
     margin-left: -1%;
   }
 }
+
 
 #edit-task-header {
   text-align: center;
